examples/diagnostics_demos/errors/unknown_prefix_operator_error.flx
// Intended to trigger E010 (UNKNOWN PREFIX OPERATOR).
// If this is rejected by the parser, the error may be E105 instead.
~1;
